--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="iss.nus.adproject_android_v2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ADPROJECT_Android_v2">
+        android:theme="@style/Theme.ADPROJECT_Android_v2"
+        android:usesCleartextTraffic="true"
+        >
+        <activity
+            android:name=".MealDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PastMealsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".testUploadImageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SetGoalActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
