Minor edit in manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:exported="false" />
         <activity
             android:name=".CaptureActivity"
+            android:exported="false" />
         <activity
             android:name=".MealDetailActivity"
             android:exported="false" />
