add: past goals list. changeprofile photo; not work: upload photo to server.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.ADPROJECT_Android_v2"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".PastGoalsActivity"
+            android:exported="false" />
+        <activity
             android:name=".GoalDetailsActivity"
             android:exported="false" />
         <activity
