implemented feed page without view more button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.ADPROJECT_Android_v2"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ViewFeedActivity"
+            android:exported="false" />
+        <activity
             android:name=".CommentBlogEntryActivity"
             android:exported="false" />
         <activity
