Resolve issue with Submit button view moved by keyboard

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:exported="false" />
         <activity
             android:name=".SubmitActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".CaptureActivity"
             android:exported="false" />
