quit app immediately from dashboard

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,6 +134,9 @@
             android:name=".SetGoalActivity"
             android:exported="false" />
         <activity
+            android:name=".ExitActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
 <!--            <intent-filter>-->
